[docs] add docs for deployment and building (#20)